# smooth_clock

./: CMakeLists.txt  Main.qml  main.cpp  timeprovider.cpp  timeprovider.h
